get closer to having evolutions show up

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -26,7 +26,8 @@
   "evolutionsScreen": {
     "title": "Evolutions",
     "noEvolutions": "does not evolve",
-    "hasEvolutions": "can evolve into"
+    "hasEvolutions": "can evolve into",
+    "noSelection": "search for a pokemon or shuffle to show possible evolutions"
   },
   "encountersScreen": {
     "title": "Encounters"
