add species to evolution i18n strings

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -25,8 +25,8 @@
   },
   "evolutionsScreen": {
     "title": "Evolutions",
-    "noEvolutions": "does not evolve",
-    "hasEvolutions": "can evolve into",
+    "noEvolutions": "%{species} does not evolve",
+    "hasEvolutions": "%{species} can evolve into",
     "noSelection": "search for a pokemon or shuffle to show possible evolutions"
   },
   "encountersScreen": {
