better format iamges on about screen, add i18n copy for links

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -10,8 +10,9 @@
   "aboutScreen": {
     "title": "SimpleDex",
     "version": "",
-    "developer": "",
-    "projectPage": ""
+    "developer": "Developer",
+    "project": "Project",
+    "poweredBy": "Powered by"
   },
   "searchScreen": {
     "title": "Search",
