add external link icon, pokeapi i18n string, finish about screen

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -12,7 +12,8 @@
     "version": "",
     "developer": "Developer",
     "project": "Project",
-    "poweredBy": "Powered by"
+    "poweredBy": "Powered by",
+    "pokeApi": "PokeAPI"
   },
   "searchScreen": {
     "title": "Search",
