add version i18n string

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -9,7 +9,7 @@
   },
   "aboutScreen": {
     "title": "SimpleDex",
-    "version": "",
+    "version": "Version %{version}",
     "developer": "Developer",
     "project": "Project",
     "poweredBy": "Powered by",
