get version names into encounter screen

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -33,7 +33,9 @@
     "detailTitle": "Method %{num}"
   },
   "encountersScreen": {
-    "title": "Encounters"
+    "title": "Encounters",
+    "noEncounter": "%{species} has no encounters",
+    "noSelection": "search for a pokemon or shuffle to show possible encounters",
   },
   "errorScreen": {
     "title": "Something went wrong!",
