rm debug consoles, fix encounters/filter logic

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -34,7 +34,7 @@
   },
   "encountersScreen": {
     "title": "Encounters",
-    "noEncounter": "%{species} has no encounters",
+    "noEncounters": "%{species} has no encounters",
     "noSelection": "search for a pokemon or shuffle to show possible encounters",
     "hasEncounters": "%{species} can be encountered at",
     "location": "Location: %{location}",
