fix some layout stuff, fix state on encounters carousel

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -34,7 +34,7 @@
   },
   "encountersScreen": {
     "title": "Encounters",
-    "noEncounters": "%{species} has no encounters",
+    "noEncounters": "%{species} has no encounters in %{version}",
     "noSelection": "search for a pokemon or shuffle to show possible encounters",
     "hasEncounters": "%{species} can be encountered at",
     "location": "Location: %{location}",
