add min/max levels, render all details except condition values

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -41,7 +41,10 @@
     "method": "Method: %{method}",
     "chance": "Chance: %{chance}%",
     "filterPlaceholder": "filter...",
-    "noFilter": "select a version to filter by"
+    "noFilter": "select a version to filter by",
+    "minLevel": "Minimum Level: %{level}",
+    "maxLevel": "Maximum Level: %{level}",
+    "conditions": "Conditions:"
   },
   "filterScreen": {
     "title": "Filter",
