add privacy policy and terms to about screen

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -13,7 +13,9 @@
     "developer": "Developer",
     "project": "Project",
     "poweredBy": "Powered by",
-    "pokeApi": "PokeAPI"
+    "pokeApi": "PokeAPI",
+    "privacyPolicy": "Privacy Policy",
+    "terms": "Terms & Conditions"
   },
   "searchScreen": {
     "title": "Search",
