add codepush, add deployment keys

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SimpleDex</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">WAfFGJ1POqQTTGKVtxZD5uEBQr4BoEk-hVTya</string>
 </resources>
